--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
  }
 
  html,
- body {
+ body{
    margin: 0;
    padding: 0;
    width: 100%;
@@ -23,6 +23,18 @@
  * {
    box-sizing: border-box;
  }
+
+p{
+  margin: 0;
+}
+
+button, a {
+  color: var(--text-color, #000);
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  
+}
+
 
  body {
    font-family: var(--font-primary, 'Poppins'), sans-serif;
@@ -40,7 +52,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: end;  
 }
  
  .page-wrapper {
@@ -59,6 +71,4 @@
    gap: var(--space-md);
    overflow-y: auto;
  }
-
-
  
