--- a/src/styles/general/depositeBox.css
+++ b/src/styles/general/depositeBox.css
@@ -1,13 +1,41 @@
-.deposit-box {
-    width: 100%;
-    height: 100%;
-    border: var(--border);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-    border-radius: var(--radius-md);
-    padding-bottom: 20px;
-    padding-top: 20px;
-}
  
+
+.deposit-box {
+  width: 100%;
+  height: 100%;
+  border: var(--border);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--radius-md);
+  padding: 20px;
+}
+
+/* ✅ Estilo para o contêiner da lista */
+.last-deposits-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px; /* Espaço entre os itens */
+}
+
+/* ✅ Estilo para cada item individual */
+.last-deposit-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 2px dotted var(--grey-300); /* Linha pontilhada */
+}
+
+.last-deposit-item span {
+  font-size: var(--font-size-md);
+  color: var(--black);
+}
+
+.last-deposit-item span:last-child {
+  color: var(--green-100);
+  font-weight: bold;
+}
