--- a/src/styles/general/depositeBox.css
+++ b/src/styles/general/depositeBox.css
@@ -1,41 +1,46 @@
- 
-
+/* Container principal, o "quadro" dos depósitos */
 .deposit-box {
   width: 100%;
-  height: 100%;
   border: var(--border);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: var(--radius-md);
-  padding: 20px;
+  align-items: space-between;  
+  border-radius: var(--radius-md); 
+  box-sizing: border-box;
+  padding-bottom: 14px;
 }
-
-/* ✅ Estilo para o contêiner da lista */
+ 
 .last-deposits-list {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 15px; /* Espaço entre os itens */
+  flex-direction: column; 
+  justify-content: ce;
 }
-
-/* ✅ Estilo para cada item individual */
+ 
 .last-deposit-item {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding-bottom: 10px;
-  border-bottom: 2px dotted var(--grey-300); /* Linha pontilhada */
+  justify-content: space-between;
+  display: flex; 
+  width: 100%; 
+  padding: 8px;
+  border-bottom: 2px dashed var(--black);  
 }
 
-.last-deposit-item span {
-  font-size: var(--font-size-md);
+.last-deposit-item span { 
+  font-size: var(--label);
   color: var(--black);
+  font-weight: var(--bold)
 }
 
 .last-deposit-item span:last-child {
   color: var(--green-100);
-  font-weight: bold;
+   
 }
+ 
+.deposit-box__content {
+    width: 100%;
+    display: flex;  
+    flex-direction: column; 
+    align-items: center;  
+}
+ 
