--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,17 @@
    padding: 0;
    width: 100%;
    height: 100%;
+   -webkit-touch-callout: none;  
  }
 
  * {
-   box-sizing: border-box;
- }
+   box-sizing: border-box; 
+  user-select: none;         
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;  
+}
+  
 
 p{
   margin: 0;
@@ -126,3 +132,19 @@ body {
   width: 30%;
   padding-bottom: 20px;
  }
+
+ .splash-logo {
+  width: 25%;
+  height: auto;
+  animation: coin-spin 2s linear infinite;
+  transform-style: preserve-3d;  
+}
+ 
+@keyframes coin-spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
